# cuda_minimal_template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  run.cu
